set hypr to use DP-3

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,7 +12,7 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 #
 
 
-monitor=,1920x1080@164,0x0,1
+monitor=DP-3,1920x1080@164,0x0,1
 
 input {
     kb_layout=gb
