--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,10 +8,12 @@
 # For a full list, see the wiki (basic and advanced configuring)
 #
 
-monitor=,preferred,0x0,1
+monitor=,preferred,auto,1
 monitor=HDMI-A-1,1920x1080@60,1920x0,1
+#monitor=DP-1,1920x1080@60,0x0,1
 monitor=DP-1,1920x1080@160,0x0,1
-#workspace=DP-3,1
+workspace=DP-1,1
+workspace=HDMI-A-1,2
 
 input {
     kb_layout=gb
