--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -81,12 +81,13 @@ gestures {
 
 # example binds
 bind=SUPER,RETURN,exec,kitty
-bind=SUPER,C,killactive,
+bind=SUPER,Q,killactive,
 bind=SUPER,M,exit,
 bind=SUPER,E,exec,firefox
 bind=SUPER,V,togglefloating,
 bind=SUPER,D,exec,bemenu-run
 bind=SUPER,P,pseudo,
+bind=SUPER,f,fullscreen
 
 bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
