add swaybg to start up

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -116,5 +116,7 @@ bind=ALT,8,movetoworkspace,8
 bind=ALT,9,movetoworkspace,9
 bind=ALT,0,movetoworkspace,10
 
+exec-once=swaybg -i $HOME/wallpapers/linuxPRIDE1080.png
+
 bind=SUPER,mouse_down,workspace,e+1
 bind=SUPER,mouse_up,workspace,e-1
