--- a/sway/config
+++ b/sway/config
@@ -246,6 +246,19 @@ bindsym $mod+$altmod+$right resize shrink width $respeed
 # Scripts:
 #
 bindsym $mod+w exec dunstify "time" "$(date)" -r 6969
+#
+# Media keys reqires playerctl and volumecontrol script 
+#
+bindsym --locked XF86AudioRaiseVolume exec 'volumeControl.sh up'
+bindsym --locked XF86AudioLowerVolume exec 'volumeControl.sh down'
+bindsym --locked XF86AudioMute exec 'volumeControl.sh mute'
+
+bindsym --locked XF86AudioPlay exec playerctl play-pause
+bindsym --locked XF86AudioStop exec playerctl stop
+bindsym --locked XF86AudioPrev exec playerctl previous
+bindsym --locked XF86AudioNext exec playerctl next
+
+#
 # Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
