--- a/sway/config
+++ b/sway/config
@@ -186,11 +186,10 @@ input <identifier> xkb_model "pc101"
     # Switch the current container between different layout styles
     #bindsym $mod+s layout stacking
     bindsym $mod+t layout tabbed
-    #bindsym $mod+e layout toggle split
+    bindsym $mod+$altmod+t layout toggle split
 
     # Make the current focus fullscreen
     bindsym $mod+f fullscreen
-
     # global fullscreen: across all monitors
     bindsym $mod+shift+f        fullscreen toggle global
     # Toggle the current focus between tiling and floating mode
