--- a/sway/config
+++ b/sway/config
@@ -290,5 +290,5 @@ titlebar_padding 1
 
 #exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 #exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec_always autotiling
+exec autotiling
 include /etc/sway/config.d/*
