--- a/sway/config
+++ b/sway/config
@@ -250,6 +250,7 @@ bindsym $mod+$altmod+$right resize shrink width $respeed
 #
 bindsym $mod+w exec dunstify "time" "$(date)" -r 6969
 bindsym $mod+p exec zswayice
+bindsym $mod+r exec steam-fzf bemenu 
 
 #
 # Media keys reqires playerctl and volumecontrol script 
