--- a/sway/config
+++ b/sway/config
@@ -23,7 +23,8 @@ set $term kitty
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
 #set $menu dmenu_path | dmenu | xargs swaymsg exec --
-set $menu wofi --show drun
+set $menu launchscript bemenu
+#set $menu launchscript wofi --show=dmenuv 
 set $altmenu wofi --show run
 #set $menu st "compgen -c | sort -u | fzf | xargs -r swaymsg -t command exec"
 
