set XWAYLAND1 as primary display

--- a/sway/config
+++ b/sway/config
@@ -295,4 +295,5 @@ titlebar_padding 1
 exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 #exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec autotiling
+exec_always xrandr --output "XWAYLAND1" --primary
 include /etc/sway/config.d/*
