add exec dbus-update

--- a/sway/config
+++ b/sway/config
@@ -293,7 +293,7 @@ titlebar_padding 1
 # for_window [app_id="kitty"] floating enable, exec "sway-move-to top-left"
 
 exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec autotiling
 exec_always xrandr --output "XWAYLAND1" --primary
 include /etc/sway/config.d/*
