--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -93,7 +93,7 @@ sticker_file			"~/.local/share/mpd/sticker.sql"
 # This setting is the TCP port that is desired for the daemon to get assigned
 # to.
 #
-#port				"6600"
+port				"6600"
 #
 # Suppress all messages below the given threshold.  Use "verbose" for
 # troubleshooting. Available setting arguments are "notice", "info", "verbose",
