--- a/sway/config
+++ b/sway/config
@@ -292,6 +292,7 @@ titlebar_padding 1
 
 # for_window [title="Picture-in-Picture"] floating enable, exec "sway-move-to bottom-right"
 
+exec wl-paste --primary --watch wl-copy --primary --clear
 exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec autotiling
