--- a/sway/config
+++ b/sway/config
@@ -198,7 +198,9 @@ input <identifier> xkb_model "pc101"
     # Toggle the current focus between tiling and floating mode
     #bindsym $mod+Shift+space floating toggle
     bindsym $mod+s floating toggle
-
+    
+    bindsym $mod+z sticky enable
+    bindsym $mod+Shift+z sticky disable
     # Swap focus between the tiling area and the floating area
     bindsym $mod+space focus mode_toggle
 
