add godot and steam to max_render time off list

--- a/sway/config
+++ b/sway/config
@@ -306,6 +306,8 @@ bindsym $mod+Print mode "$screenshot"
 #    }
 #}
 for_window [instance="origin.exe"] floating enable
+for_window [class="Godot"] max_render_time off
+for_window [class="Steam"] max_render_time off
 # for_window [title="ULTRAKILL"] fullscreen
 default_border pixel 3
 for_window [title="^.*"] title_format ""
