--- a/sway/config
+++ b/sway/config
@@ -318,8 +318,9 @@ font pango:monospace 0
 titlebar_border_thickness 0                                                     
 titlebar_padding 1
 
-# for_window [title="Picture-in-Picture"] floating enable, exec "sway-move-to bottom-right"
 
+# for_window [title="Picture-in-Picture"] floating enable, exec "sway-move-to bottom-right", sticky enable
+for_window [title="Picture-in-Picture"] floating enable, sticky enable
 exec wl-paste --primary --watch wl-copy --primary --clear
 exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
