--- a/sway/config
+++ b/sway/config
@@ -202,8 +202,9 @@ input <identifier> xkb_model "pc101"
     #bindsym $mod+Shift+space floating toggle
     bindsym $mod+s floating toggle
     
-    bindsym $mod+z sticky enable
-    bindsym $mod+Shift+z sticky disable
+    bindsym $mod+z sticky toggle
+    #bindsym $mod+z sticky enable
+    #bindsym $mod+Shift+z sticky disable
     # Swap focus between the tiling area and the floating area
     bindsym $mod+space focus mode_toggle
 
