--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,14 +8,26 @@
 # For a full list, see the wiki (basic and advanced configuring)
 #
 
+
 monitor=,preferred,auto,1
-monitor=HDMI-A-1,1920x1080@60,1920x0,1
-#monitor=DP-1,1920x1080@60,0x0,1
-monitor=DP-1,1920x1080@160,0x0,1
+monitor=DP-1,1920x1080@165,0x0,1
+monitor=HDMI-A-1,preferred,1920x0,1
 workspace=DP-1,1
-workspace=HDMI-A-1,2
+workspace=HDMI-A-1,7
+wsbind=1,DP-1
+wsbind=2,DP-1
+wsbind=3,DP-1
+wsbind=4,DP-1
+wsbind=5,DP-1
+wsbind=6,DP-1
+wsbind=7,HDMI-A-1
+wsbind=8,HDMI-A-1
+wsbind=9,HDMI-A-1
+
+
 
 input {
+    kb_file=
     kb_layout=gb
     kb_variant=
     kb_model=
