--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -39,14 +39,15 @@ input {
     touchpad {
         natural_scroll=no
     }
+
+    sensitivity=0 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
-    sensitivity=1.0 # for mouse cursor
     main_mod=SUPER
 
-    gaps_in=5
-    gaps_out=20
+    gaps_in=10
+    gaps_out=10
     border_size=2
     col.active_border=0x66ee1111
     col.inactive_border=0x66333333
