--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -90,15 +90,22 @@ gestures {
 #windowrule=pseudo,abc
 #windowrule=monitor 0,xyz
 
+# some nice mouse binds
+bindm=SUPER,mouse:272,movewindow
+bindm=SUPER,mouse:273,resizewindow
+
+
+$MENU = bemenu
 # example binds
 bind=SUPER,RETURN,exec,kitty
 bind=SUPER,Q,killactive,
-bind=SUPER,M,exit,
-bind=SUPER,E,exec,firefox
-bind=SUPER,V,togglefloating,
-bind=SUPER,D,exec,bemenu-run
+bind=SUPERSHIFT,Escape,exit,
+#bind=SUPER,E,exec,dolphin
+bind=SUPER,S,togglefloating,
+bind=SUPER,F,fullscreen,
+bind=SUPER,D,exec,launchscript $MENU
 bind=SUPER,P,pseudo,
-bind=SUPER,f,fullscreen
+bind=SUPER,W,exec,dunstify "time" "$(date)" -r 6969
 
 bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
