--- a/sway/config
+++ b/sway/config
@@ -302,6 +302,7 @@ mode "$screenshot" {
     bindsym 3 exec 'grim -g "$(slurp)" - | wl-copy', mode "default"
     bindsym 4 exec 'grim - | wl-copy', mode "default"
     bindsym 5 exec 'grim -g "$(slurp)" - | swappy -f -', mode "default"
+    bindsym 6 exec 'ripdrag ~/screenshot/ps_*', mode "default"
 
 # back to normal: Enter or Escape
     bindsym Return mode "default"
