update binds and rules

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -105,7 +105,17 @@ bind=SUPER,S,togglefloating,
 bind=SUPER,F,fullscreen,
 bind=SUPER,D,exec,launchscript $MENU
 bind=SUPER,P,pseudo,
+
+# scripts
+bind=SUPER,R,exec,steam-fzf $MENU
 bind=SUPER,W,exec,dunstify "time" "$(date)" -r 6969
+bind=SUPER,F10,pass,^(com\.obsproject\.Studio)$
+bind=SUPER,X,exec,voice.sh
+bind=SUPERSHIFT,X,exec,xfix
+
+# rules
+windowrule=float,cava
+
 
 bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
