add screenshot submap

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -106,6 +106,24 @@ bind=SUPER,F,fullscreen,
 bind=SUPER,D,exec,launchscript $MENU
 bind=SUPER,P,pseudo,
 
+#screenshot submap
+bind=SUPER,Print,submap,screenshot
+submap=screenshot
+bind=,1,exec,grim -g "$(slurp)" ~/screenshot/ps_$(date +"%Y%m%d%H%M%S").png
+bind=,2,exec,grim ~/screenshot/ps_$(date +"%Y%m%d%H%M%S").png
+bind=,3,exec,grim -g "$(slurp)" - | wl-copy
+bind=,4,exec,grim - | wl-copy
+bind=,5,exec,grim -g "$(slurp)" - | swappy -f -
+bind=,6,exec,ripdrag ~/screenshot/ps_*
+bind=,1,submap,reset
+bind=,2,submap,reset
+bind=,3,submap,reset
+bind=,4,submap,reset
+bind=,5,submap,reset
+bind=,6,submap,reset
+bind=,escape,submap,reset
+bind=,return,submap,reset
+submap=reset
 # scripts
 bind=SUPER,R,exec,steam-fzf $MENU
 bind=SUPER,W,exec,dunstify "time" "$(date)" -r 6969
