add pin keybind

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -103,6 +103,8 @@ bind=SUPERSHIFT,Escape,exit,
 #bind=SUPER,E,exec,dolphin
 bind=SUPER,S,togglefloating,
 bind=SUPER,F,fullscreen,
+bind=SUPERSHIFT,F,bringactivetotop
+bind=SUPER,Z,pin,
 bind=SUPER,D,exec,launchscript $MENU
 bind=SUPER,P,pseudo,
 
