--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -137,6 +137,14 @@ bind=SUPERSHIFT,X,exec,xfix
 windowrule=float,cava
 
 
+#media keys
+bind=,XF86AudioRaiseVolume,exec,volumeControl.sh up
+bind=,XF86AudioLowerVolume,exec,volumeControl.sh down
+bind=,XF86AudioMute,exec,volumeControl.sh mute
+bind=,XF86AudioPlay,exec,playerctl play-pause
+bind=,XF86AudioStop,exec,playerctl stop
+bind=,XF86AudioPrev,exec,playerctl previous
+bind=,XF86AudioNext,exec,playerctl next
 bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
 bind=SUPER,up,movefocus,u
