make time keybind loop

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -128,7 +128,7 @@ bind=,return,submap,reset
 submap=reset
 # scripts
 bind=SUPER,R,exec,steam-fzf $MENU
-bind=SUPER,W,exec,dunstify "time" "$(date)" -r 6969
+binde=SUPER,W,exec,dunstify "time" "$(date)" -r 6969
 bind=SUPER,F10,pass,^(com\.obsproject\.Studio)$
 bind=SUPER,X,exec,voice.sh
 bind=SUPERSHIFT,X,exec,xfix
