--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -81,6 +81,17 @@ gestures {
     workspace_swipe=no
 }
 
+#VARS
+$WALLPAPER=~/wallpapers/linuxPRIDE1080.png
+$MENU = bemenu
+$discordwin = chrome-discord.com__app-Default
+$ncmpcppwin = ncmpcppsp
+$casterowin = casterosp
+$left = h
+$right = l
+$up = j
+$down = k
+
 # example window rules
 # for windows named/classed as abc and xyz
 #windowrule=move 69 420,abc
@@ -95,7 +106,6 @@ bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 
 
-$MENU = bemenu
 # example binds
 bind=SUPER,RETURN,exec,kitty
 bind=SUPER,Q,killactive,
