--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -101,6 +101,12 @@ $down = k
 #windowrule=pseudo,abc
 #windowrule=monitor 0,xyz
 
+# rules
+windowrule=float,cava
+windowrule=forceinput,overwatch.exe
+windowrule=noanim,overwatch.exe
+windowrule=fullscreen,robloxplayerbeta.exe
+windowrule=float,$discordwin
 # some nice mouse binds
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
