add scripts and push to talk submap

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -147,11 +147,18 @@ bind=SUPER,R,exec,steam-fzf $MENU
 binde=SUPER,W,exec,dunstify "time" "$(date)" -r 6969
 bind=SUPER,F10,pass,^(com\.obsproject\.Studio)$
 bind=SUPER,X,exec,voice.sh
-bind=SUPERSHIFT,X,exec,xfix
+bind=SUPERSHIFT,X,exec,xfix auto
+bind=SUPERALT,W,exec,notify-send "$(hyprctl activewindow)"
+bind=SUPER,V,exec,amixer set Capture cap
+bindr=SUPER,V,exec,amixer set Capture nocap
+bind=SUPERSHIFT,V,exec,amixer set Capture cap
+bind=SUPERALT,V,submap,voice
+submap=voice
+bind=SUPERSHIFT,V,submap,reset
+bind=,V,exec,amixer set Capture cap
+bindr=,V,exec,amixer set Capture nocap
 
-# rules
-windowrule=float,cava
-
+submap=reset
 
 #media keys
 bind=,XF86AudioRaiseVolume,exec,volumeControl.sh up
