--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -159,6 +159,29 @@ bind=,V,exec,amixer set Capture cap
 bindr=,V,exec,amixer set Capture nocap
 
 submap=reset
+#scratchpads
+bind=SUPER,A,exec,pgrep -x "discord" || discord
+bind=SUPER,A,movetoworkspace,+0,$discordwin
+bind=SUPERSHIFT,A,movetoworkspacesilent,200,$discordwin
+windowrule=size 800 800,$discordwin
+windowrule=center,$discordwin
+
+bind=SUPER,C,exec,[ -z "$(hyprctl clients -j | jq '.[] | select(.class=="ncmpcppsp")')" ] && kitty --class "ncmpcppsp" -e ncmpcpp 
+bind=SUPER,C,movetoworkspace,+0,$ncmpcppwin
+#bind=SUPERSHIFT,C,exec,kill $(hyprctl clients -j | jq '.[] | select(.class=="ncmpcppsp").pid')
+bind=SUPERSHIFT,C,movetoworkspacesilent,200,$ncmpcppwin
+windowrule=float,$ncmpcppwin
+windowrule=size 500 500,$ncmpcppwin
+windowrule=center,$ncmpcppwin
+windowrule=noanim,$ncmpcppwin
+
+bind=SUPERALT,C,exec,[ -z "$(hyprctl clients -j | jq '.[] | select(.class=="casterosp")')" ] && kitty --class "casterosp" -e castero 
+bind=SUPERALT,C,movetoworkspace,+0,$casterowin
+bind=SUPERSHIFT,C,movetoworkspacesilent,200,$casterowin
+windowrule=float,$casterowin
+windowrule=size 500 500,$casterowin
+windowrule=center,$casterowin
+windowrule=noanim,$casterowin
 
 #media keys
 bind=,XF86AudioRaiseVolume,exec,volumeControl.sh up
