--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -191,6 +191,14 @@ bind=,XF86AudioPlay,exec,playerctl play-pause
 bind=,XF86AudioStop,exec,playerctl stop
 bind=,XF86AudioPrev,exec,playerctl previous
 bind=,XF86AudioNext,exec,playerctl next
+
+#bind=SUPER,tab,layoutmsg,cyclenext
+#bind=SUPER,tab,exec,kitty
+
+bind=SUPER,$left,movefocus,l
+bind=SUPER,$right,movefocus,r
+bind=SUPER,$up,movefocus,u
+bind=SUPER,$down,movefocus,d
 bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
 bind=SUPER,up,movefocus,u
