add more exec at starts

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -142,6 +142,7 @@ bind=,6,submap,reset
 bind=,escape,submap,reset
 bind=,return,submap,reset
 submap=reset
+
 # scripts
 bind=SUPER,R,exec,steam-fzf $MENU
 binde=SUPER,W,exec,dunstify "time" "$(date)" -r 6969
@@ -226,9 +227,10 @@ bind=SUPERSHIFT,8,movetoworkspace,8
 bind=SUPERSHIFT,9,movetoworkspace,9
 bind=SUPERSHIFT,0,movetoworkspace,10
 
-
+exec-once=noisetorch -i
+exec-once=hyprctl dispatch workspace 1
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-$WALLPAPER=~/wallpapers/linuxPRIDE1080.png
+exec=xrandr --output "XWAYLAND1" --primary
 exec-once=swaybg -i $WALLPAPER
 bind=SUPER,mouse_down,workspace,e+1
 bind=SUPER,mouse_up,workspace,e-1
