--- a/sway/config
+++ b/sway/config
@@ -66,8 +66,13 @@ output * bg /home/zuki/wallpapers/linuxPRIDE1080.png fill
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 set $mainmon DP-1
 set $secmon HDMI-A-1
-output HDMI-A-1 resolution 1920x1080 position 1920,0
-output DP-1 mode 1920x1080@160Hz position 0,0
+set $steamdeck HEADLESS-1
+# output DP-1 layout none mirror HDMI-A-1
+# set $main HDMI-A-1
+output $secmon resolution 1920x1080 position 1920,0
+output $mainmon mode 1920x1080@160Hz position 0,0
+output $steamdeck mode 1200x800@60hz position 3840,0
+bindsym $mod+grave output $secmon toggle
 workspace 1 output $mainmon
 workspace 2 output $mainmon
 workspace 3 output $mainmon
@@ -78,7 +83,7 @@ workspace 7 output $secmon
 workspace 8 output $secmon
 workspace 9 output $secmon
 workspace 10 output $secmon
-workspace 11 output $secmon
+workspace 11 output $steamdeck
 
 ### Idle configuration
 #
