--- a/sway/config
+++ b/sway/config
@@ -229,7 +229,7 @@ input <identifier> xkb_model "pc101"
     bindsym $mod+space focus mode_toggle
 
     # Move focus to the parent container
-    #bindsym $mod+a focus parent
+    bindsym $mod+a focus parent
 #
 # Scratchpad:
 #
@@ -243,7 +243,7 @@ input <identifier> xkb_model "pc101"
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+minus scratchpad show
 
-    bindsym $mod+a exec $ipctool '[app_id="Electron" title="WebCord"] scratchpad show; move position center' || webcord
+    #bindsym $mod+a exec $ipctool '[app_id="Electron" title="WebCord"] scratchpad show; move position center' || webcord
 #
 # Resizing containers:
 #
