--- a/sway/config
+++ b/sway/config
@@ -353,6 +353,7 @@ titlebar_border_thickness 1
 titlebar_padding 1
 
 
+for_window [app_id="^chrome-.*"] shortcuts_inhibitor disable
 # for_window [title="Picture-in-Picture"] floating enable, exec "sway-move-to bottom-right", sticky enable
 for_window [title="Picture-in-Picture"] floating enable, sticky enable
 for_window [class="overwatch.exe"] workspace 6, move container to workspace 6
