remove Firefox Picture-in-Picture border

--- a/i3sway/config
+++ b/i3sway/config
@@ -394,7 +394,7 @@ for_window [title="^.*"] title_format ""
 for_window [class="^.*"] border pixel $border
 # titlebar_border_thickness 1                                                    
 # titlebar_padding 1
-for_window [title="Picture-in-Picture"] floating enable, sticky enable
+for_window [title="Picture-in-Picture"] floating enable, sticky enable, border pixel 0
 for_window [class="overwatch.exe"] workspace 6, move container to workspace 6
 for_window [title="Wine System Tray"] kill
 # for_window [app_id="Electron" title="WebCord"] move to scratchpad
