--- a/picom.conf
+++ b/picom.conf
@@ -84,14 +84,15 @@ fade-in-step = 0.03;
 # fade-out-step = 0.03
 fade-out-step = 0.03;
 
+
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+#fade-delta = 10
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
 
 # Do not fade on window open/close.
-# no-fading-openclose = false
+no-fading-openclose = false
 
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
@@ -103,19 +104,19 @@ fade-out-step = 0.03;
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.9;
+ inactive-opacity = 1
+#inactive-opacity = 0.9;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
-frame-opacity = 0.9;
+ frame-opacity = 1.0
+#frame-opacity = 0.9;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 1.0
+active-opacity = 1
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -134,7 +135,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-opacity-rule = [   "100:class_g = 'firefox' && WM_WINDOW_ROLE@:s *?= 'Popup'" ]
+opacity-rule = [   "100:class_g = 'firefox' && WM_WINDOW_ROLE@:s *?= 'Popup'", "90:I3_FLOATING_WINDOW@:c" ]
 
 
 #################################
@@ -237,7 +238,7 @@ mark-ovredir-focused = true;
 # shaped windows. The accuracy is not very high, unfortunately.
 #
 # detect-rounded-corners = false
-detect-rounded-corners = true;
+#detect-rounded-corners = true;
 
 # Detect '_NET_WM_WINDOW_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_WINDOW_OPACITY' of client windows to frame windows.
@@ -255,7 +256,7 @@ detect-client-opacity = true;
 # to maximize performance for full-screen windows. Known to cause flickering
 # when redirecting/unredirecting windows.
 #
-# unredir-if-possible = false
+unredir-if-possible = true
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
@@ -343,6 +344,7 @@ use-damage = true;
 # Reverts to checking if a window is fullscreen based only on its size and coordinates.
 #
 # no-ewmh-fullscreen = false
+no-ewmh-fullscreen = false
 
 # Dimming bright windows so their brightness doesn't exceed this set value.
 # Brightness of a window is estimated by averaging all pixels in the window,
