--- a/picom.conf
+++ b/picom.conf
@@ -49,7 +49,9 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "name = 'new_launcher.exe'",
+  "_GTK_FRAME_EXTENTS@:c",
+  "override_redirect = true"
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -218,7 +220,7 @@ blur-background-exclude = [
 backend = "xrender";
 
 # Enable/disable VSync.
- vsync = false
+vsync = false
 #vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
@@ -425,7 +427,9 @@ wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; clip-shadow-above = true; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 1; shadow = false; }
-  dropdown_menu = { opacity = 0.9; shadow = false; }
+#  dnd = { shadow = false; }
+#  popup_menu = { opacity = 1; shadow = false; }
+#  dropdown_menu = { opacity = 0.9; shadow = false; }
+#  utility       = { shadow = false; };
+#  toolbar = { shadow = false; };
 };
