--- a/i3/config
+++ b/i3/config
@@ -4,9 +4,10 @@ set $ipctool i3-msg
 set $mainmon DP-0
 set $secmon HDMI-0
 #WALLPAPER
-exec xsetroot -solid "#1E242D"
+#exec xsetroot -solid "#1E242D"
+exec_always hsetroot -solid "#1E242D"
 exec X11fixmouse
 #LOCKSYNTAX
 set $locksyntax
-set $secmontoggle exec X11togglemon HDMI-0
+set $secmontoggle exec X11togglemon HDMI-0 && sleep 2 && hsetroot -solid "#1E242D"
 include ~/.config/i3sway/config
