add systemctl --user import for

--- a/i3/config
+++ b/i3/config
@@ -1,6 +1,7 @@
 set $ipctool i3-msg
 
 #DISPLAY
+exec "systemctl --user import-environment XDG_CURRENT_DESKTOP DISPLAY XAUTHORITY"
 set $mainmon DP-0
 set $secmon HDMI-0
 #WALLPAPER
