--- a/i3/config
+++ b/i3/config
@@ -8,6 +8,7 @@ set $secmon HDMI-0
 #exec xsetroot -solid "#1E242D"
 exec_always hsetroot -solid "#1E242D"
 exec X11fixmouse
+exec picom
 #LOCKSYNTAX
 set $locksyntax
 set $secmontoggle exec X11togglemon HDMI-0 && sleep 2 && hsetroot -solid "#1E242D"
