--- a/MangoHud/MangoHud.conf
+++ b/MangoHud/MangoHud.conf
@@ -91,8 +91,8 @@ frametime
 
 ### Display miscellaneous information
 # engine_version
-# gpu_name
-# vulkan_driver
+gpu_name
+ vulkan_driver
 # wine
 
 ### Display loaded MangoHud architecture
