--- a/i3sway/config
+++ b/i3sway/config
@@ -390,10 +390,11 @@ for_window [class="^.*"] border pixel $border
 # titlebar_border_thickness 1                                                    
 # titlebar_padding 1
 for_window [title="Picture-in-Picture"] floating enable, sticky enable, border pixel 0
-for_window [class="overwatch.exe"] workspace 6, move container to workspace 6
 # nuclear throne
 for_window [class="steam_app_242680"] fullscreen disable, floating disable
 for_window [title="Nuclear Throne"] floating disable, fullscreen disable
+
+##for_window [class="overwatch.exe"] workspace 6, move container to workspace 6
 for_window [title="Wine System Tray"] kill
 # for_window [app_id="Electron" title="WebCord"] move to scratchpad
 # for_window [app_id="Electron" title="WebCord"] scratchpad show
