--- a/i3/config
+++ b/i3/config
@@ -14,6 +14,7 @@ set $locksyntax
 set $secmontoggle exec X11togglemon HDMI-0 && sleep 2 && hsetroot -solid "#1E242D"
 set $clipboard exec clipmenu
 
+set $zukice exec zukice
 #
 # Screen capture (source https://www.reddit.com/r/swaywm/comments/pdyx0w/comment/hau6yck/?utm_source=share&utm_medium=web2x&context=3)
 #
