--- a/i3sway/config
+++ b/i3sway/config
@@ -330,6 +330,8 @@ bindsym $mod+shift+g exec "input_detach.sh"
 bindsym $mod+control+g exec "blue_attach.sh"
 bindsym $mod+control+shift+g exec "blue_detach.sh"
 
+bindsym $mod+e exec "rofi -modi emoji -show emoji"
+
 
 set $mousekey arrow key's move mouse
 set $Keymousepx 100
