disable noise torch autostartup

--- a/i3sway/config
+++ b/i3sway/config
@@ -430,7 +430,7 @@ for_window [window_role="GtkFileChooserDialog"] floating enable
 exec autotiling
 #  exec sleep 0.5 && swaymsg workspace number 1
 exec $ipctool workspace number 1
-exec sleep 5; noisetorch -i 
+#exec sleep 5; noisetorch -i 
 #exec swayxfix
 #exec feh --bg-fill ~/wallpapers/linuxPRIDE1080.png
 
