--- a/picom.conf
+++ b/picom.conf
@@ -216,12 +216,13 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = "glx"
-backend = "xrender";
+backend = "glx"
+#backend = "xrender";
+#backend = "xr_glx_hybrid";
 
 # Enable/disable VSync.
-vsync = false
-#vsync = true;
+#vsync = false
+vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
