--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,45 @@
+/*
+!git
+!.gitmodules
+!zshrc
+!shprofile 
+!picom.conf
+!pacman-installed
+!pacman-ex-installed 
+!chromium-flags.conf
+!bashrc
+!README.md 
+!zdm/
+!xdg-desktop-portal-wlr/
+!wofi/
+!wallpaper/
+!tofi/
+!sxhkd/
+!sway/
+!shell/
+!root/
+!river/
+!qutebrowser/
+!qtile/
+!nvim/
+!ncmpcpp/
+!mpd/
+!kitty/
+!keepassxc/
+!kanshi/
+!i3sway/
+!i3/
+!hypr/
+!dunst/
+!castero/
+!bspwm/
+!awesome/
+!alacritty/
+!Xwayland/
+!VFIOinput/
+!MangoHud/
+!Kvantum/
+!Epic/PortalWars/
 qutebrowser/greasemonkey/disable/deadname.js
 git/credentials
 SideQuest
