--- a/i3/config
+++ b/i3/config
@@ -33,7 +33,7 @@ set $zukice exec zukice
 #    bindsym $mod+Print mode "default"
 #}
 
-bindsym Mod4+Print exec scrot --file ~/screenshot/ps_$(date +"%Y%m%d%H%M%S").png
-bindsym Mod4+Shift+Print exec flameshot gui
+#bindsym Mod4+Print exec scrot --file ~/screenshot/ps_$(date +"%Y%m%d%H%M%S").png
+#bindsym Mod4+Shift+Print exec flameshot gui
 
 include ~/.config/i3sway/config
