--- a/picom.conf
+++ b/picom.conf
@@ -137,7 +137,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-opacity-rule = [   "100:class_g = 'firefox' && WM_WINDOW_ROLE@:s *?= 'Popup'", "90:I3_FLOATING_WINDOW@:c" ]
+#opacity-rule = [   "100:class_g = 'firefox' && WM_WINDOW_ROLE@:s *?= 'Popup'", "90:I3_FLOATING_WINDOW@:c", "100:class_g = 'mpv'" ]
+opacity-rule = [   "100:class_g = 'firefox' && WM_WINDOW_ROLE@:s *?= 'Popup'",  "100:class_g = 'mpv'", "90:I3_FLOATING_WINDOW@:c" ]
 
 
 #################################
