--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -141,6 +141,7 @@ keymap = [
 
 	# Goto
 	{ on = [ "g", "h" ],       exec = "cd ~",             desc = "Go to the home directory" },
+	{ on = [ "g", "m" ],       exec = "cd /mnt",          desc = "Go to the /mnt directory" },
 	{ on = [ "g", "c" ],       exec = "cd ~/.config",     desc = "Go to the config directory" },
 	{ on = [ "g", "d" ],       exec = "cd ~/Downloads",   desc = "Go to the downloads directory" },
 	{ on = [ "g", "t" ],       exec = "cd /tmp",          desc = "Go to the temporary directory" },
