--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -64,13 +64,13 @@ keymap = [
 	{ on = [ "<C-Enter>" ], exec = "open --interactive",                                   desc = "Open the selected files interactively" },
 	{ on = [ "y" ],         exec = [ "yank", "escape --visual --select" ],                 desc = "Copy the selected files" },
 	{ on = [ "Y" ],         exec = [ "unyank", "escape --visual --select" ],               desc = "Cancel the yank status of files" },
-	{ on = [ "x" ],         exec = [ "yank --cut", "escape --visual --select" ],           desc = "Cut the selected files" },
+	{ on = [ "d" ],         exec = [ "yank --cut", "escape --visual --select" ],           desc = "Cut the selected files" },
 	{ on = [ "p" ],         exec = "paste",                                                desc = "Paste the files" },
 	{ on = [ "P" ],         exec = "paste --force",                                        desc = "Paste the files (overwrite if the destination exists)" },
 	{ on = [ "-" ],         exec = "link",                                                 desc = "Symlink the absolute path of files" },
 	{ on = [ "_" ],         exec = "link --relative",                                      desc = "Symlink the relative path of files" },
-	{ on = [ "d" ],         exec = [ "remove", "escape --visual --select" ],               desc = "Move the files to the trash" },
-	{ on = [ "D" ],         exec = [ "remove --permanently", "escape --visual --select" ], desc = "Permanently delete the files" },
+	{ on = [ "x" ],         exec = [ "remove", "escape --visual --select" ],               desc = "Move the files to the trash" },
+	{ on = [ "X" ],         exec = [ "remove --permanently", "escape --visual --select" ], desc = "Permanently delete the files" },
 	{ on = [ "a" ],         exec = "create",                                               desc = "Create a file or directory (ends with / for directories)" },
 	{ on = [ "r" ],         exec = "rename --cursor=before_ext",                           desc = "Rename a file or directory" },
 	{ on = [ ";" ],         exec = "shell",                                                desc = "Run a shell command" },
