--- a/i3sway/config
+++ b/i3sway/config
@@ -114,6 +114,7 @@ workspace 11 output $steamdeck
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
+bindsym $mod+control+l exec $lockprogram
 
 ### Input configuration
 #
